@@ -1,10 +1,10 @@
 /*
 // $Id$
 // Farrago is an extensible data management system.
-// Copyright (C) 2005-2005 The Eigenbase Project
-// Copyright (C) 2005-2005 Disruptive Tech
-// Copyright (C) 2005-2005 LucidEra, Inc.
-// Portions Copyright (C) 2003-2005 John V. Sichi
+// Copyright (C) 2005 The Eigenbase Project
+// Copyright (C) 2005 SQLstream, Inc.
+// Copyright (C) 2005 Dynamo BI Corporation
+// Portions Copyright (C) 2003 John V. Sichi
 //
 // This program is free software; you can redistribute it and/or modify it
 // under the terms of the GNU General Public License as published by the Free
@@ -43,7 +43,6 @@ import net.sf.farrago.type.*;
 public class FarragoJdbcEnginePreparedNonDdl
     extends FarragoJdbcEnginePreparedStatement
 {
-
     //~ Constructors -----------------------------------------------------------
 
     /**
@@ -53,7 +52,7 @@ public class FarragoJdbcEnginePreparedNonDdl
      * @param stmtContext the underyling prepared FarragoSessionStmtContext
      * @param sql the text of the SQL statement
      */
-    FarragoJdbcEnginePreparedNonDdl(
+    public FarragoJdbcEnginePreparedNonDdl(
         FarragoJdbcEngineConnection connection,
         FarragoSessionStmtContext stmtContext,
         String sql)
@@ -69,7 +68,7 @@ public class FarragoJdbcEnginePreparedNonDdl
     {
         try {
             stmtContext.execute();
-            return (stmtContext.getResultSet() != null);
+            return (openCursorResultSet() != null);
         } catch (Throwable ex) {
             throw FarragoJdbcEngineDriver.newSqlException(ex);
         }
@@ -79,13 +78,15 @@ public class FarragoJdbcEnginePreparedNonDdl
     public ResultSet executeQuery()
         throws SQLException
     {
+        validateSession();
         if (stmtContext.isPreparedDml()) {
             throw new SQLException(ERRMSG_NOT_A_QUERY + sql);
         }
         try {
             stmtContext.execute();
-            assert (stmtContext.getResultSet() != null);
-            return stmtContext.getResultSet();
+            ResultSet resultSet = openCursorResultSet();
+            assert (resultSet != null);
+            return resultSet;
         } catch (Throwable ex) {
             throw FarragoJdbcEngineDriver.newSqlException(ex);
         }
@@ -95,6 +96,7 @@ public class FarragoJdbcEnginePreparedNonDdl
     public int executeUpdate()
         throws SQLException
     {
+        validateSession();
         if (!stmtContext.isPreparedDml()) {
             throw new SQLException(ERRMSG_IS_A_QUERY + sql);
         }
@@ -119,9 +121,9 @@ public class FarragoJdbcEnginePreparedNonDdl
             throw new SQLException(ERRMSG_NOT_A_QUERY + sql);
         }
         try {
-            return
-                new FarragoResultSetMetaData(
-                    stmtContext.getPreparedRowType());
+            return new FarragoResultSetMetaData(
+                stmtContext.getPreparedRowType(),
+                stmtContext.getPreparedFieldOrigins());
         } catch (Throwable ex) {
             throw FarragoJdbcEngineDriver.newSqlException(ex);
         }
@@ -132,9 +134,8 @@ public class FarragoJdbcEnginePreparedNonDdl
         throws SQLException
     {
         try {
-            return
-                new FarragoParameterMetaData(
-                    stmtContext.getPreparedParamType());
+            return new FarragoParameterMetaData(
+                stmtContext.getPreparedParamType());
         } catch (Throwable ex) {
             throw FarragoJdbcEngineDriver.newSqlException(ex);
         }
@@ -205,7 +206,7 @@ public class FarragoJdbcEnginePreparedNonDdl
     {
         setDynamicParam(
             parameterIndex,
-            new Byte(x));
+            Byte.valueOf(x));
     }
 
     // implement PreparedStatement
@@ -216,7 +217,7 @@ public class FarragoJdbcEnginePreparedNonDdl
     {
         setDynamicParam(
             parameterIndex,
-            new Short(x));
+            Short.valueOf(x));
     }
 
     // implement PreparedStatement
@@ -227,7 +228,7 @@ public class FarragoJdbcEnginePreparedNonDdl
     {
         setDynamicParam(
             parameterIndex,
-            new Integer(x));
+            Integer.valueOf(x));
     }
 
     // implement PreparedStatement
@@ -238,7 +239,7 @@ public class FarragoJdbcEnginePreparedNonDdl
     {
         setDynamicParam(
             parameterIndex,
-            new Long(x));
+            Long.valueOf(x));
     }
 
     // implement PreparedStatement
@@ -249,7 +250,7 @@ public class FarragoJdbcEnginePreparedNonDdl
     {
         setDynamicParam(
             parameterIndex,
-            new Float(x));
+            Float.valueOf(x));
     }
 
     // implement PreparedStatement
@@ -260,7 +261,7 @@ public class FarragoJdbcEnginePreparedNonDdl
     {
         setDynamicParam(
             parameterIndex,
-            new Double(x));
+            Double.valueOf(x));
     }
 
     // implement PreparedStatement
