@@ -1,10 +1,10 @@
 /*
 // $Id$
 // Farrago is an extensible data management system.
-// Copyright (C) 2006-2006 The Eigenbase Project
-// Copyright (C) 2006-2006 Disruptive Tech
-// Copyright (C) 2006-2006 LucidEra, Inc.
-// Portions Copyright (C) 2003-2005 John V. Sichi
+// Copyright (C) 2006 The Eigenbase Project
+// Copyright (C) 2006 SQLstream, Inc.
+// Copyright (C) 2006 Dynamo BI Corporation
+// Portions Copyright (C) 2003 John V. Sichi
 //
 // This program is free software; you can redistribute it and/or modify it
 // under the terms of the GNU General Public License as published by the Free
@@ -43,14 +43,13 @@ import org.eigenbase.util.*;
  * 10001 into a DECIMAL(5) column.
  * </ol>
  *
- * <p>TODO: Actually enfore these constraints.
+ * <p>TODO: Actually enfore these constraints. This class is JDK 1.4 compatible.
  *
  * @author Angel Chang
  * @version $Id$
  */
 public class FarragoJdbcParamDef
 {
-
     //~ Instance fields --------------------------------------------------------
 
     final FarragoParamFieldMetaData paramMetaData;
@@ -58,7 +57,8 @@ public class FarragoJdbcParamDef
 
     //~ Constructors -----------------------------------------------------------
 
-    FarragoJdbcParamDef(String paramName,
+    FarragoJdbcParamDef(
+        String paramName,
         FarragoParamFieldMetaData paramMetaData)
     {
         this.paramName = paramName;
@@ -98,7 +98,8 @@ public class FarragoJdbcParamDef
         }
     }
 
-    protected void checkRange(BigInteger value,
+    protected void checkRange(
+        BigInteger value,
         BigInteger min,
         BigInteger max)
     {
@@ -110,14 +111,18 @@ public class FarragoJdbcParamDef
     protected void checkRange(long value, long min, long max)
     {
         if ((value < min) || (value > max)) {
-            throw newValueOutOfRange(Long.valueOf(value));
+            // For JDK 1.4 compatibility
+            throw newValueOutOfRange(new Long(value));
+            //throw newValueOutOfRange(Long.valueOf(value));
         }
     }
 
     protected void checkRange(double value, double min, double max)
     {
         if ((value < min) || (value > max)) {
-            throw newValueOutOfRange(Double.valueOf(value));
+            // For JDK 1.4 compatibility
+            throw newValueOutOfRange(new Double(value));
+            //throw newValueOutOfRange(Double.valueOf(value));
         }
     }
 
@@ -127,11 +132,11 @@ public class FarragoJdbcParamDef
     protected EigenbaseException newInvalidType(Object x)
     {
         // TODO: Change to use client resources
-        return
-            new EigenbaseException(
-                "Cannot assign a value of Java class " + x.getClass().getName()
-                + " to parameter of type " + paramMetaData.paramTypeStr,
-                null);
+        return new EigenbaseException(
+            "Cannot assign a value of Java class " + x
+            .getClass().getName()
+            + " to parameter of type " + paramMetaData.paramTypeStr,
+            null);
 
         //return FarragoResource.instance().ParameterValueIncompatible.ex(
         //    x.getClass().getName(),
@@ -144,11 +149,10 @@ public class FarragoJdbcParamDef
     protected EigenbaseException newNotNullable()
     {
         // TODO: Change to use client resources
-        return
-            new EigenbaseException(
-                "Cannot assign NULL to non-nullable parameter of type"
-                + paramMetaData.paramTypeStr,
-                null);
+        return new EigenbaseException(
+            "Cannot assign NULL to parameter '" + paramName + "' of type "
+            + paramMetaData.paramTypeStr + " NOT NULL",
+            null);
 
         //return FarragoResource.instance().ParameterValueNotNullable.ex(
         //    paramMetaData.paramTypeStr);
@@ -161,11 +165,10 @@ public class FarragoJdbcParamDef
     protected EigenbaseException newInvalidFormat(Object x)
     {
         // TODO: Change to use client resources
-        return
-            new EigenbaseException(
-                "Value '" + x + "' cannot be converted to parameter of type "
-                + paramMetaData.paramTypeStr,
-                null);
+        return new EigenbaseException(
+            "Value '" + x + "' cannot be converted to parameter of type "
+            + paramMetaData.paramTypeStr,
+            null);
 
         //return FarragoResource.instance().ParameterValueInvalidFormat.ex(
         //    x.toString(),
@@ -179,11 +182,10 @@ public class FarragoJdbcParamDef
     protected EigenbaseException newValueTooLong(Object x)
     {
         // TODO: Change to use client resources
-        return
-            new EigenbaseException(
-                "Value '" + x + "' is too long for parameter of type "
-                + paramMetaData.paramTypeStr,
-                null);
+        return new EigenbaseException(
+            "Value '" + x + "' is too long for parameter of type "
+            + paramMetaData.paramTypeStr,
+            null);
 
         //return FarragoResource.instance().ParameterValueTooLong.ex(
         //    x.toString(),
@@ -197,11 +199,10 @@ public class FarragoJdbcParamDef
     protected EigenbaseException newValueOutOfRange(Object x)
     {
         // TODO: Change to use client resources
-        return
-            new EigenbaseException(
-                "Value '" + x + "' is out of range for parameter of type "
-                + paramMetaData.paramTypeStr,
-                null);
+        return new EigenbaseException(
+            "Value '" + x + "' is out of range for parameter of type "
+            + paramMetaData.paramTypeStr,
+            null);
 
         //return FarragoResource.instance().ParameterValueOutOfRange.ex(
         //    x.toString(),
